# get-weather-icon

./: README.md  dune-project  weather.opam
_build/: .db  .digest-db  log
_build/default/: weather.dune-package  weather.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: weather.cma  weather.cmxa  weather.cmxs  weather.ml
_build/default/lib/.merlin-conf/: lib-weather
_build/default/lib/.weather.objs/byte/: weather.cmi  weather.cmo  weather.cmt
_build/default/lib/.weather.objs/native/: weather.cmx
_build/default/test/: test_weather.ml
_build/default/test/.merlin-conf/: exe-test_weather
_build/default/test/.test_weather.eobjs/byte/: dune__exe__Test_weather.cmi  dune__exe__Test_weather.cmti
_build/default/test/.test_weather.eobjs/native/: dune__exe__Test_weather.cmx
_build/install/default/lib/weather/: META  dune-package  opam
lib/: dune
test/: dune
